2019-10-05  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c, wayland/ui.h:
	  - xdg_toplevel_close() invokes window_destroyed event.
	  - Primary selection is supported with the use of gtk-primary-selection.[ch].

	* wayland/gtk-primary-selection.[ch]: Added

2019-10-01  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_window.c: ui_window_get_str() converts keysym to utf8 string
	  with the use of ui_display_get_utf8().

	* wayland/ui_display.[ch]: ui_display_get_char() => ui_display_get_utf8()

	* ui_font.c: If the width of 'W' glyph is larger than face->max_advance_width,
	  xfont->width_full = the width 'W' glyph.

2019-09-29  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c: Copy&paste from other applications to mlerm-wl works.

	* wayland/ui_display.c: ui_display_show_root() calls wl_display_dispatch().
	  (Fix for 1) in https://sourceforge.net/p/mlterm/discussion/130836/thread/bc008c18db/#bb38)

	* mlconfig/po/Makefile.in: config.status is never called.

2019-09-28  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui.h, wayland/ui_display.c: xdg-shell is supported.

	* xdg-shell-unstable-v6-client-protocol.[ch]: Added.

2019-09-23  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_window.c: class_hint (WM_CLASS property) is passed to
	  XmbSetWMProperties() in ui_window_show().

	* vt_pty_mosh.cpp: Pass through sequence state of each Network::Transport
	  is saved in pass_seq_t.

2019-09-23  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_window.c: _NET_WM_PID is set.
	  (https://sourceforge.net/p/mlterm/patches/24/)

	* zmodem.c: q_screen_dirty is removed.

2019-09-22  Araki Ken  <arakiken@users.sf.net>

	* ui_display_wscons.c:
	  (fboffset + 0x40000) * _disp.depth => fboffset + 0x40000 * _disp.depth

2019-09-21  Araki Ken  <arakiken@users.sf.net>

	* ui_im_candidate_screen.c: ui_im_candidate_t::filled_len = 0
	  in case it is not 0.

2019-09-19  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL: Updated.

	* win32/ui_xic.c: